# UC-adnaneds-unet

./: Jenkinsfile  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: main.yml
unet/: api.py  utils.py
